syntax = "proto3";
package events;
option csharp_namespace = "Application.Protos.Events";

message ElementDeletedEvent {
	string book_id = 1;
	string page_id = 2;
	string element_id = 3;
}